code/kubernetes/temporary_pods_for_exec_hops/python-with-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anthonys-temp-with-python-deployment
  labels:
    app: anthonys-temp-with-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anthonys-temp-with-python
  template:
    metadata:
      labels:
        app: anthonys-temp-with-python 
    spec:
      containers:
      - name: anthonys-temp-with-python
        image: python:3.7-slim-buster
        command: ["sleep", "infinity"]
        volumeMounts:
          - name: anthonys-temp-with-python-volume
            mountPath: /storage
      volumes:
        - name: anthonys-temp-with-python-volume
          persistentVolumeClaim:
            claimName: anthonys-temp-with-python-pvc
